--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,28 +1,139 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @media screen and (min-width: 576px) and (max-width: 768px) {
   body {
     display: flex;
     flex-direction: column;
     font-size: 1rem;
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    color: #6c1900;
   }
   ul {
+    width: 100%;
     display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     list-style: none;
   }
   ul img {
-    width: 5%;
+    width: 30%;
+    margin-right: 10px;
   }
   ul li {
     display: flex;
     background-color: #ffdf7f;
-    border-radius: 15%;
+    border-radius: 40px;
     justify-content: center;
     align-items: center;
-
-    width: 20%;
+    padding: 1em 0.5em;
+    font-weight: 600;
+    width: 15%;
   }
+  #special-li {
+    font-size: 1.7rem;
+    text-transform: uppercase;
+    padding: 1em 0.8em;
+    border-radius: 40px;
+  }
+
+  .container div:last-child {
+    display: none;
+  }
+
   nav {
     background-color: #fef7e2;
     display: flex;
     justify-content: space-evenly;
+    width: 100%;
+    height: 100px;
+    padding: 0.5em 0;
+    position: sticky;
+    top: 0;
+  }
+
+  main {
+    display: flex;
+    flex-direction: column;
+  }
+  h1 {
+    font-size: 3rem;
+    font-weight: 800;
+    margin-bottom: 20px;
+  }
+  section {
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+  }
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .card {
+    width: 48%;
+    border-radius: 40px;
+    margin-bottom: 20px;
+    background-color: #fef7e2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .card img {
+    width: 100%;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+  }
+  .card > div {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 1em;
+  }
+  .card-p {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    line-height: 18px;
+  }
+  .card-p h5 {
+    font-weight: 600;
+  }
+  .card-p p {
+    font-size: 0.8rem;
+  }
+  .card button {
+    border-radius: 40px;
+    border: none;
+    background-color: #ffdf7f;
+    width: 50%;
+    padding: 0.5em 1em;
+    margin-bottom: 20px;
+    font-weight: 600;
+    color: #6c1900;
+    font-family: "Inter", sans-serif;
+  }
+  section h2 {
+    font-size: 2.5rem;
+    font-weight: 800;
+    margin-bottom: 20px;
+  }
+  article {
+    display: flex;
+    flex-direction: column;
+    background-color: #fef7e2;
+    padding: 1.5em;
+    border-radius: 40px;
+    line-height: 20px;
+  }
+  article h3 {
+    font-size: 1.5rem;
+    font-weight: 800;
+    margin-bottom: 20px;
+  }
+  article img {
+    width: 100%;
+    margin: 2em 0 1em 0;
   }
 }
