--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -39,7 +39,11 @@
   .container div:last-child {
     display: none;
   }
-
+  header {
+    position: sticky;
+    top: 0;
+    width: 100%;
+  }
   nav {
     background-color: #fef7e2;
     display: flex;
@@ -47,8 +51,6 @@
     width: 100%;
     height: 100px;
     padding: 0.5em 0;
-    position: sticky;
-    top: 0;
   }
 
   main {
@@ -108,6 +110,444 @@
     border: none;
     background-color: #ffdf7f;
     width: 50%;
+    padding: 0.5em 1em;
+    margin-bottom: 20px;
+    font-weight: 600;
+    color: #6c1900;
+    font-family: "Inter", sans-serif;
+  }
+  section h2 {
+    font-size: 2.5rem;
+    font-weight: 800;
+    margin-bottom: 20px;
+  }
+  article {
+    display: flex;
+    flex-direction: column;
+    background-color: #fef7e2;
+    padding: 1.5em;
+    border-radius: 40px;
+    line-height: 20px;
+  }
+  article h3 {
+    font-size: 1.5rem;
+    font-weight: 800;
+    margin-bottom: 20px;
+  }
+  article img {
+    width: 100%;
+    margin: 2em 0 1em 0;
+  }
+}
+@media screen and (min-width: 390px) and (max-width: 575px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    font-size: 1rem;
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    color: #6c1900;
+    margin: 0;
+  }
+  ul {
+    width: 80%;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: space-evenly;
+    padding: 1em;
+  }
+  ul img {
+    width: 20%;
+    margin-right: 20px;
+  }
+  ul li {
+    background-color: #ffdf7f;
+    border-radius: 40px;
+    font-weight: 600;
+    width: 40%;
+    padding: 1rem 0.5rem;
+    text-align: center;
+  }
+  #special-li {
+    font-size: 2rem;
+    text-transform: uppercase;
+    border-radius: 100px;
+    width: 100%;
+    padding: 1.5rem 0;
+    order: -1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  nav {
+    background-color: #fef7e2;
+    width: 90%;
+    height: 300px;
+    padding: 0.5em 0;
+    display: flex;
+    justify-content: center;
+    border-radius: 100px;
+    margin: 1em;
+  }
+  main {
+    display: flex;
+    flex-direction: column;
+  }
+  h1 {
+    font-size: 3rem;
+    font-weight: 800;
+    margin-bottom: 25px;
+  }
+  section {
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  .card {
+    width: 100%;
+    border-radius: 60px;
+    margin-bottom: 20px;
+    background-color: #fef7e2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .card img {
+    width: 100%;
+    border-top-left-radius: 60px;
+    border-top-right-radius: 60px;
+  }
+  .card > div {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 1em;
+  }
+  .card-p {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    line-height: 18px;
+  }
+  .card-p h5 {
+    font-weight: 600;
+  }
+  .card-p p {
+    font-size: 0.8rem;
+  }
+  .card button {
+    border-radius: 40px;
+    border: none;
+    background-color: #ffdf7f;
+    width: 50%;
+    padding: 0.5em 1em;
+    margin-bottom: 20px;
+    font-weight: 600;
+    color: #6c1900;
+    font-family: "Inter", sans-serif;
+  }
+  section h2 {
+    font-size: 2.5rem;
+    font-weight: 800;
+    margin-bottom: 20px;
+  }
+  article {
+    display: flex;
+    flex-direction: column;
+    background-color: #fef7e2;
+    padding: 1.5em;
+    border-radius: 40px;
+    line-height: 20px;
+    text-align: left;
+  }
+  article h3 {
+    font-size: 1.5rem;
+    font-weight: 800;
+    margin-bottom: 20px;
+    text-align: left;
+  }
+  article img {
+    width: 100%;
+    margin: 2em 0 1em 0;
+  }
+}
+@media screen and (min-width: 769px) and (max-width: 1440px) {
+  body {
+    display: flex;
+    flex-direction: row;
+    font-size: 1rem;
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    color: #6c1900;
+  }
+  ul {
+    width: 100%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    padding: 1em;
+  }
+  ul img {
+    width: 25%;
+    margin-right: 10px;
+  }
+  ul li {
+    display: flex;
+    background-color: #ffdf7f;
+    border-radius: 60px;
+    justify-content: center;
+    align-items: center;
+    padding: 2em 0.5em;
+    font-weight: 600;
+    width: 100%;
+  }
+  #special-li {
+    width: 100%;
+    font-size: 1.7rem;
+    text-transform: uppercase;
+    padding: 0.8em 0.2em;
+    border-radius: 60px;
+    order: -1;
+  }
+
+  .container div:last-child {
+    display: none;
+  }
+  header {
+    height: 100vh;
+    position: sticky;
+    top: 0;
+  }
+
+  nav {
+    background-color: #fef7e2;
+    display: flex;
+    height: 100vh;
+    width: 230px;
+    padding: 1rem;
+  }
+
+  main {
+    display: flex;
+    flex-direction: column;
+  }
+  h1 {
+    font-size: 2.7rem;
+    font-weight: 800;
+    margin-bottom: 30px;
+  }
+  section {
+    padding: 1.5em;
+    display: flex;
+    flex-direction: column;
+  }
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .card {
+    width: 23%;
+    border-radius: 50px;
+    margin-bottom: 20px;
+    background-color: #fef7e2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .card img {
+    width: 100%;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+  }
+  .card > div {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 1.2em;
+    text-align: center;
+  }
+  .card-p {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    line-height: 18px;
+    padding: 0.3em;
+    margin-right: 5px;
+  }
+  .card-p h5 {
+    font-weight: 600;
+  }
+  .card-p p {
+    font-size: 0.8rem;
+  }
+  .card-p + p {
+    margin-right: 10px;
+  }
+  .card button {
+    border-radius: 40px;
+    border: none;
+    background-color: #ffdf7f;
+    width: 65%;
+    padding: 0.5em 1em;
+    margin-bottom: 20px;
+    font-weight: 600;
+    color: #6c1900;
+    font-family: "Inter", sans-serif;
+  }
+  section h2 {
+    font-size: 2.5rem;
+    font-weight: 800;
+    margin-bottom: 20px;
+  }
+  article {
+    display: flex;
+    flex-direction: column;
+    background-color: #fef7e2;
+    padding: 1.5em;
+    border-radius: 40px;
+    line-height: 20px;
+  }
+  article h3 {
+    font-size: 1.5rem;
+    font-weight: 800;
+    margin-bottom: 20px;
+  }
+  article img {
+    width: 100%;
+    margin: 2em 0 1em 0;
+  }
+}
+@media screen and (min-width: 1441px) and (max-width: 1990px) {
+  body {
+    display: flex;
+    flex-direction: row;
+    font-size: 1rem;
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    color: #6c1900;
+  }
+  ul {
+    width: 100%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    padding: 1em;
+  }
+  ul img {
+    width: 25%;
+    margin-right: 10px;
+  }
+  ul li {
+    display: flex;
+    background-color: #ffdf7f;
+    border-radius: 60px;
+    justify-content: center;
+    align-items: center;
+    padding: 2em 0.5em;
+    font-weight: 600;
+    width: 100%;
+  }
+  #special-li {
+    width: 100%;
+    font-size: 1.7rem;
+    text-transform: uppercase;
+    padding: 0.8em 0.2em;
+    border-radius: 60px;
+    order: -1;
+  }
+
+  .container div:last-child {
+    display: none;
+  }
+  header {
+    height: 100vh;
+    position: sticky;
+    top: 0;
+  }
+
+  nav {
+    background-color: #fef7e2;
+    display: flex;
+    height: 100vh;
+    width: 230px;
+    padding: 1rem;
+  }
+
+  main {
+    display: flex;
+    flex-direction: column;
+  }
+  h1 {
+    font-size: 2.7rem;
+    font-weight: 800;
+    margin-bottom: 30px;
+  }
+  section {
+    padding: 1.5em;
+    display: flex;
+    flex-direction: column;
+  }
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .card {
+    width: 23%;
+    border-radius: 50px;
+    margin-bottom: 20px;
+    background-color: #fef7e2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .card img {
+    width: 100%;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+  }
+  .card > div {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 1.2em;
+    text-align: center;
+  }
+  .card-p {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    line-height: 18px;
+    padding: 0.3em;
+    margin-right: 5px;
+  }
+  .card-p h5 {
+    font-weight: 600;
+  }
+  .card-p p {
+    font-size: 0.8rem;
+  }
+  .card-p + p {
+    margin-right: 10px;
+  }
+  .card button {
+    border-radius: 40px;
+    border: none;
+    background-color: #ffdf7f;
+    width: 65%;
     padding: 0.5em 1em;
     margin-bottom: 20px;
     font-weight: 600;
