--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -307,6 +307,7 @@
     padding: 2em 0.5em;
     font-weight: 600;
     width: 100%;
+    margin-top: 20px;
   }
   #special-li {
     width: 100%;
@@ -458,6 +459,7 @@
     padding: 2em 0.5em;
     font-weight: 600;
     width: 100%;
+    margin-top: 20px;
   }
   #special-li {
     width: 100%;
